# gmail-job-triage-agent

./: .gitignore  Dockerfile  PROMPT.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
scripts/: deploy.sh  gmail_oauth_local.py
src/: __init__.py  classifier.py  gmail_client.py  handler.py  prompts.py  state.py  telegram_client.py
terraform/: github_actions.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
