[project]
name = "gmail-job-triage-agent"
version = "0.1.0"
description = "Serverless agent that classifies job-search emails with Claude and posts a daily Telegram digest."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.149.0",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
